--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
 
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Update Service</title>
+</head>
+<body>
+    <div class = "title">
+        <h2>Nekonya Studio<br>Static Update Service （Outsource）</h2>
+    </div>
+    <div class="sub_title">
+        <p>(>^ω^<)</p>
+        <p>Corala.Space Project</p>
+    </div>
+
+
+    <style>
+        .title{
+            text-align: center;
+            padding-top: 2ex;
+        }
+        .sub_title{
+            text-align: center;
+            padding: 1em;
+            
+        }
+    </style>
+</body>
+</html>
