--- a/index.html
+++ b/index.html
@@ -1,32 +1,23 @@
-
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Update Service</title>
+    <title>Nekonya Outsource Static Update</title>
+    <link rel="stylesheet" type="text/css" href="page.css"/>
 </head>
 <body>
-    <div class = "title">
-        <h2>Nekonya Studio<br>Static Update Service （Outsource）</h2>
-    </div>
-    <div class="sub_title">
-        <p>(>^ω^<)</p>
-        <p>Corala.Space Project</p>
+    <div class="title">
+        <h1>Nekonya Outsource</br>Static Update Service</h1>
+        
+        <p>猫喵工作室 外包项目 静态更新索性服务</p>
     </div>
 
-
-    <style>
-        .title{
-            text-align: center;
-            padding-top: 2ex;
-        }
-        .sub_title{
-            text-align: center;
-            padding: 1em;
-            
-        }
-    </style>
+    <div class="footer">
+        Copy Right © Nekonya Studio
+        <br>
+        <a href="nekonya.io" target="_blank">nekonya.io</a> | <a href="https://yomunchan.moe" target="_blank">blog</a> | <a href="https://corala.space" target="_blank">corala.space project</a>
+    </div>
 </body>
 </html>
